--- a/ignore.po
+++ b/ignore.po
@@ -1,3 +1,144 @@
+msgid ",x"
+msgstr ""
+
+msgid ".dat"
+msgstr ""
+
+msgid ".kml"
+msgstr ""
+
+msgid ".map"
+msgstr ""
+
+msgid ".tab"
+msgstr ""
+
+msgid ".w"
+msgstr ""
+
+msgid "AUX |*.aux"
+msgstr ""
+
+msgid "KML |*.kml"
+msgstr ""
+
+msgid "Zip |*.zip"
+msgstr ""
+
+msgid "az@sasgis.ru"
+msgstr ""
+
+msgid "http://sasgis.ru"
+msgstr ""
+
+msgid "Debug Info"
+msgstr ""
+
+msgid "Blackman"
+msgstr ""
+
+msgid "Box"
+msgstr ""
+
+msgid "Cosine"
+msgstr ""
+
+msgid "Cubic"
+msgstr ""
+
+msgid "Gaussian"
+msgstr ""
+
+msgid "Hann"
+msgstr ""
+
+msgid "Hermite"
+msgstr ""
+
+msgid "Lanczos"
+msgstr ""
+
+msgid "Linear"
+msgstr ""
+
+msgid "Mitchell"
+msgstr ""
+
+msgid "Hamming"
+msgstr ""
+
+msgid "Sinsh"
+msgstr ""
+
+msgid "Spline"
+msgstr ""
+
+msgid "EarthSlicer 1.95"
+msgstr ""
+
+msgid "ES1.95"
+msgstr ""
+
+msgid "Googe maps tiles"
+msgstr ""
+
+msgid "GMT (GlobalMapper >=10.02)"
+msgstr ""
+
+msgid "BMP (Bitmap Picture)"
+msgstr ""
+
+msgid "ECW (Enhanced Compression Wavelet)"
+msgstr ""
+
+msgid "JPEG (Joint Photographic Experts Group)"
+msgstr ""
+
+msgid "JPEG2000"
+msgstr ""
+
+msgid "Google"
+msgstr ""
+
+msgid "Google Earth"
+msgstr ""
+
+msgid "GoogleMV"
+msgstr ""
+
+msgid "GPS"
+msgstr ""
+
+msgid "GSM"
+msgstr ""
+
+msgid "URL"
+msgstr ""
+
+msgid "Logo"
+msgstr ""
+
+msgid "Wikimapia"
+msgstr ""
+
+msgid "WebMoney:"
+msgstr ""
+
+msgid "WME: E382109079322"
+msgstr ""
+
+msgid "WMR: R112587212279"
+msgstr ""
+
+msgid "WMZ: Z122595752786"
+msgstr ""
+
+msgid "z1"
+msgstr ""
+
+msgid "Zmp"
+msgstr ""
+
 #  Doesn't have any letters
 msgid "-"
 msgstr ""
